--- a/Public/Index/css/style.css
+++ b/Public/Index/css/style.css
@@ -38,18 +38,18 @@ a:active{noOutline:expression(this.onFocus=this.blur());}
 .ht_m1{ float:left; width:145px; height:441px; background:url(../images/htbg21.jpg) no-repeat;}
 .ht_m2{ float:left; width:434px; height:441px; background:#2b79e5;}
 .ht_m2 .toutiao{ width:434px;}
-.ht_m2 .toutiao dl dt{ width:434px; height:40px; line-height:40px; font-size:24px; font-weight:400; color:#fff;}
+.ht_m2 .toutiao dl dt{ width:434px; height:60px; line-height:60px; font-size:24px; font-weight:400; color:#fff;}
 .ht_m2 .toutiao dl dd.d_left{ float:left; width:98px; height:130px; color:#fff; font-size:16px; padding-top:5px;}
 .ht_m2 .toutiao dl dd.d_left a img{ width:98px; height:98px; border:0;}
 .ht_m2 .toutiao dl dd.d_left div{ height:22px; line-height:22px; font-weight:400; font-size:12px;}
 .ht_m2 .toutiao dl dd.d_right{ float:left; width:314px; padding-left:10px; height:130px; color:#fff; font-size:12px; line-height:20px;}
-.ht_m2 .discuss dl dt{ width:430px; height:30px; line-height:30px; border-bottom:#fff 1px solid; text-align:left; font-size:18px; color:#fff; font-weight:400;}
-.ht_m2 .discuss dl dd{ width:430px; height:40px; color:#fff; margin-top:10px;}
+.ht_m2 .discuss dl dt{ width:430px; height:40px; line-height:40px; border-bottom:#fff 1px solid; text-align:left; font-size:18px; color:#fff; font-weight:400;}
+.ht_m2 .discuss dl dd{ width:430px; height:40px; color:#fff; margin-top:20px;}
 .ht_m2 .discuss dl dd a img{ float:left; width:40px; height:40px; border:0; margin-right:10px;}
 .ht_m2 .discuss dl dd div{ float:left; width:380px; height:40px; }
 .ht_m2 .discuss dl dd div h2{ height:20px; line-height:20px; text-align:left; font-size:14px; font-weight:400;}
 .ht_m2 .discuss dl dd div p{ height:15px; width:380px; overflow:hidden; line-height:15px; font-size:12px; padding-top:5px;}
-.ht_m2 .btn_ht{ width:430px; height:61px; margin:10px 0 0 0;}
+/*.ht_m2 .btn_ht{ width:430px; height:61px; margin:10px 0 0 0;}
 .ht_m2 .btn_ht ul li{ float:left; width:205px; height:28px; line-height:28px; margin-right:5px; color:#fff; font-size:12px; text-align:center; font-weight:400;}
 .ht_m2 .btn_ht ul li a{ width:205px; height:28px; display:inline-block; color:#fff; text-decoration:none;}
 .ht_m2 .btn_ht ul li.jv{ background:#ff4f51; margin-bottom:5px;}
@@ -59,7 +59,7 @@ a:active{noOutline:expression(this.onFocus=this.blur());}
 .ht_m2 .btn_ht ul li.zi{ background:#7030a0;}
 .ht_m2 .btn_ht ul li.zi a:hover{ background:#7b43a5}
 .ht_m2 .btn_ht ul li.ye{ background:#ffc000;}
-.ht_m2 .btn_ht ul li.ye a:hover{ background:#f9ca3c}
+.ht_m2 .btn_ht ul li.ye a:hover{ background:#f9ca3c}*/
 .ht_m3{ float:left; width:289px; height:441px; background:url(../images/htbg22.jpg) no-repeat; position:relative;}
 .ht_m3 .search{position:relative; width:277px; height:37px; line-height:37px; clear:both; margin:7px 0 0 12px; font-size:20px; }
 .ht_m3 .input_selected1{width:240px; color:#ccc; height:27px; line-height:27px; position:absolute; left:2px; font-size:16px; top:4px; border:none;}
@@ -73,17 +73,12 @@ a:active{noOutline:expression(this.onFocus=this.blur());}
 .ht_m4{ float:left; width:72px; height:441px; background:url(../images/htbg23.jpg) no-repeat;}
 .ht_bot{ width:940px; height:103px; background:url(../images/htbg3.jpg) no-repeat;}
 .ninebox{ width:848px; height:491px; padding:73px 42px 0 50px; background:url(../images/ninebg.jpg) repeat-x;}
-.ninebox .floorMain{ width:908px; height:491px; position:relative;}
-.ninebox .floorMain a{ float:left; width:204px; height:204px; margin:0 8px 8px 0; display:inline-block; position:absolute;}
-.ninebox .floorMain a img{ widows:204px; height:204px; border:0;}
-.ninebox .floorMain a.item1{left:0;top:0;}
-.ninebox .floorMain a.item2{left:212px;top:0;}
-.ninebox .floorMain a.item3{left:424px;top:0;}
-.ninebox .floorMain a.item4{left:636px;top:0;}
-.ninebox .floorMain a.item5{left:0px;top:212px;}
-.ninebox .floorMain a.item6{left:212px;top:212px;}
-.ninebox .floorMain a.item7{left:424px;top:212px;}
-.ninebox .floorMain a.item8{left:636px;top:212px;}
-.ninebox .floorMain a.hover{}
-.ninebox .mask{position:absolute;background:#000;opacity:0;filter:alpha(opacity=0);left:0;top:0;width:204px; height:204px;}
+.ninebox .floorMain{ width:908px; height:491px;}
+.ninebox .floorMain .whitebg{float:left; width:204px; height:204px; margin:0 8px 8px 0; overflow:hidden;}
+.ninebox .floorMain .whitebg ul li{width:204px;height:204px; float:left;}
+.ninebox .floorMain .whitebg a img{ border:none; width:204px; height:204px;}
+
 #ifr_footer{ display:none;}
+
+
+
