--- a/Public/Index/css/style.css
+++ b/Public/Index/css/style.css
@@ -43,23 +43,14 @@ a:active{noOutline:expression(this.onFocus=this.blur());}
 .ht_m2 .toutiao dl dd.d_left a img{ width:98px; height:98px; border:0;}
 .ht_m2 .toutiao dl dd.d_left div{ height:22px; line-height:22px; font-weight:400; font-size:12px;}
 .ht_m2 .toutiao dl dd.d_right{ float:left; width:314px; padding-left:10px; height:130px; color:#fff; font-size:12px; line-height:20px;}
-.ht_m2 .discuss dl dt{ width:430px; height:40px; line-height:40px; border-bottom:#fff 1px solid; text-align:left; font-size:18px; color:#fff; font-weight:400;}
-.ht_m2 .discuss dl dd{ width:430px; height:40px; color:#fff; margin-top:20px;}
+.ht_m2 .discuss dl dt{ width:430px; height:30px; line-height:30px; border-bottom:#fff 1px solid; text-align:left; font-size:18px; color:#fff; font-weight:400;}
+.ht_m2 .discuss dl dd{ width:430px; height:60px; color:#fff; margin-top:10px;}
 .ht_m2 .discuss dl dd a img{ float:left; width:40px; height:40px; border:0; margin-right:10px;}
-.ht_m2 .discuss dl dd div{ float:left; width:380px; height:40px; }
+.ht_m2 .discuss dl dd div{ float:left; width:380px; height:60px; }
 .ht_m2 .discuss dl dd div h2{ height:20px; line-height:20px; text-align:left; font-size:14px; font-weight:400;}
-.ht_m2 .discuss dl dd div p{ height:15px; width:380px; overflow:hidden; line-height:15px; font-size:12px; padding-top:5px;}
-/*.ht_m2 .btn_ht{ width:430px; height:61px; margin:10px 0 0 0;}
-.ht_m2 .btn_ht ul li{ float:left; width:205px; height:28px; line-height:28px; margin-right:5px; color:#fff; font-size:12px; text-align:center; font-weight:400;}
-.ht_m2 .btn_ht ul li a{ width:205px; height:28px; display:inline-block; color:#fff; text-decoration:none;}
-.ht_m2 .btn_ht ul li.jv{ background:#ff4f51; margin-bottom:5px;}
-.ht_m2 .btn_ht ul li.jv a:hover{ background:#fc6163;}
-.ht_m2 .btn_ht ul li.lv{ background:#92d051; margin-bottom:5px;}
-.ht_m2 .btn_ht ul li.lv a:hover{ background:#a2ce74}
-.ht_m2 .btn_ht ul li.zi{ background:#7030a0;}
-.ht_m2 .btn_ht ul li.zi a:hover{ background:#7b43a5}
-.ht_m2 .btn_ht ul li.ye{ background:#ffc000;}
-.ht_m2 .btn_ht ul li.ye a:hover{ background:#f9ca3c}*/
+.ht_m2 .discuss dl dd div h2 .yellow-v{background:url(../images/yellow-v.png) right center no-repeat; padding-right:18px;}
+.ht_m2 .discuss dl dd div p{ height:30px; width:380px; overflow:hidden; line-height:15px; font-size:12px; padding-top:5px;}
+
 .ht_m3{ float:left; width:289px; height:441px; background:url(../images/htbg22.jpg) no-repeat; position:relative;}
 .ht_m3 .search{position:relative; width:277px; height:37px; line-height:37px; clear:both; margin:7px 0 0 12px; font-size:20px; }
 .ht_m3 .input_selected1{width:240px; color:#ccc; height:27px; line-height:27px; position:absolute; left:2px; font-size:16px; top:4px; border:none;}
