--- a/Public/Index/css/style.css
+++ b/Public/Index/css/style.css
@@ -33,25 +33,23 @@ a:active{noOutline:expression(this.onFocus=this.blur());}
 .bannerleft{ float:left; width:459px; height:368px; background:url(../images/bannerleft.jpg) no-repeat;}
 .bannerright{ float:left; width:481px; height:368px; background:url(../images/bannerright.jpg) no-repeat;}
 .huatibox{ width:940px; margin:0 auto;}
-.ht_top{ width:940px; height:97px; background:url(../images/htbg1.jpg) no-repeat;}
-.ht_mid{ width:940px; height:441px;}
-.ht_m1{ float:left; width:145px; height:441px; background:url(../images/htbg21.jpg) no-repeat;}
-.ht_m2{ float:left; width:434px; height:441px; background:#2b79e5;}
-.ht_m2 .toutiao{ width:434px;}
-.ht_m2 .toutiao dl dt{ width:434px; height:60px; line-height:60px; font-size:24px; font-weight:400; color:#fff;}
-.ht_m2 .toutiao dl dd.d_left{ float:left; width:98px; height:130px; color:#fff; font-size:16px; padding-top:5px;}
-.ht_m2 .toutiao dl dd.d_left a img{ width:98px; height:98px; border:0;}
-.ht_m2 .toutiao dl dd.d_left div{ height:22px; line-height:22px; font-weight:400; font-size:12px;}
-.ht_m2 .toutiao dl dd.d_right{ float:left; width:314px; padding-left:10px; height:130px; color:#fff; font-size:12px; line-height:20px;}
+.ht_top{ width:940px; height:81px; background:url(../images/htbg1.jpg) no-repeat;}
+.ht_mid{ width:940px; height:474px;}
+.ht_m1{ float:left; width:145px; height:474px; background:url(../images/htbg21.jpg) no-repeat;}
+.ht_m2{ float:left; width:439px; height:474px; background:#2b79e5;}
+.ht_m2 .toutiao{ width:439px;}
+.ht_m2 .toutiao dl dt{ width:439px; height:60px; line-height:60px; font-size:24px; font-weight:400; color:#fff;}
+.ht_m2 .toutiao dl dd.d_left{ width:98px; hheight:32px; line-height:32px; font-weight:400; font-size:16px; color:#fff;}
+.ht_m2 .toutiao dl dd.d_right{ width:429px; height:120px; color:#fff; font-size:14px; line-height:20px; padding-right:10px;}
 .ht_m2 .discuss dl dt{ width:430px; height:30px; line-height:30px; border-bottom:#fff 1px solid; text-align:left; font-size:18px; color:#fff; font-weight:400;}
-.ht_m2 .discuss dl dd{ width:430px; height:60px; color:#fff; margin-top:10px;}
+.ht_m2 .discuss dl dd{ width:430px; height:60px; color:#fff; margin-top:15px;}
 .ht_m2 .discuss dl dd a img{ float:left; width:40px; height:40px; border:0; margin-right:10px;}
 .ht_m2 .discuss dl dd div{ float:left; width:430px; height:60px; }
 .ht_m2 .discuss dl dd div h2{ height:20px; line-height:20px; text-align:left; font-size:14px; font-weight:400;}
 .ht_m2 .discuss dl dd div h2 .yellow-v{background:url(../images/yellow-v.png) right center no-repeat; padding-right:18px;}
 .ht_m2 .discuss dl dd div p{ height:30px; width:430px; overflow:hidden; line-height:15px; font-size:12px; padding-top:5px;}
 
-.ht_m3{ float:left; width:289px; height:441px; background:url(../images/htbg22.jpg) no-repeat; position:relative;}
+.ht_m3{ float:left; width:294px; height:474px; background:url(../images/htbg22.jpg) no-repeat; position:relative;}
 .ht_m3 .search{position:relative; width:277px; height:37px; line-height:37px; clear:both; margin:7px 0 0 12px; font-size:20px; }
 .ht_m3 .input_selected1{width:240px; color:#ccc; height:27px; line-height:27px; position:absolute; left:2px; font-size:16px; top:4px; border:none;}
 .ht_m3 .input_selected2{width:240px; color:#333; height:27px; line-height:27px; position:absolute; left:2px; font-size:16px; top:4px; border:none;}
@@ -59,10 +57,10 @@ a:active{noOutline:expression(this.onFocus=this.blur());}
 .ht_m3 .biying{ float:right; height:30px; line-height:30px; background:url(../images/icon_b.gif) left center no-repeat; padding:0 5px 0 20px; text-align:left;}
 .ht_m3 .biying a{ color:#000; font-size:16px; text-decoration:underline;}
 .ht_m3 .biying a:hover{ color:#fff;}
-.ht_m3 .wbclass{ width:285px; height:0px; position:absolute; right:0; bottom:0px;}
+.ht_m3 .wbclass{ width:295px; height:0px; position:absolute; right:0; bottom:0px;}
 .ht_m3 .wbhide{ display:none;}
-.ht_m4{ float:left; width:72px; height:441px; background:url(../images/htbg23.jpg) no-repeat;}
-.ht_bot{ width:940px; height:103px; background:url(../images/htbg3.jpg) no-repeat;}
+.ht_m4{ float:left; width:62px; height:474px; background:url(../images/htbg23.jpg) no-repeat;}
+.ht_bot{ width:940px; height:86px; background:url(../images/htbg3.jpg) no-repeat;}
 .ninebox{ width:848px; height:491px; padding:73px 42px 0 50px; background:url(../images/ninebg.jpg) repeat-x;}
 .ninebox .floorMain{ width:908px; height:491px;}
 .ninebox .floorMain .whitebg{float:left; width:204px; height:204px; margin:0 8px 8px 0; overflow:hidden;}
