--- a/Public/Index3/css/style.css
+++ b/Public/Index3/css/style.css
@@ -83,7 +83,7 @@ a:active{noOutline:expression(this.onFocus=this.blur());}
 .ninebox .mask{position:absolute;background:#000;opacity:0;filter:alpha(opacity=0);left:0;top:0;width:204px; height:204px;}
 #ifr_footer{ display:none;}
 
-.tab{ height:25px; width:437px; margin:20px 0 15px 15px;}
+.tab{ height:25px; width:437px; margin:10px 0 5px 15px;}
 .tab li{ float:left; height:25px; margin-right:20px;}
 .tab li a{ height:25px; display:inline-block; cursor:pointer}
 
@@ -100,13 +100,18 @@ a:active{noOutline:expression(this.onFocus=this.blur());}
 .praisebox li div.info{ width:115px; height:95px; line-height:19px; font-size:10px; font-weight:400; overflow:hidden; text-align: left;}
 .praisebox li div.btn_praise{ float:right;}
 .praisebox li div.btn_praise a{ background:url(../images/praise.png) left center no-repeat; padding-left:22px; height:25px; line-height:25px; font-size:22px; font-weight:600; display:block; color:#fff; text-decoration:none;}
-.praisebox li div.info div.tishi{ display:none; position:absolute; width:160px; height:50px; padding:5px; background:#fff; top:50px; left:-10px; z-index:9999;}
-.praisebox li div.info div.ts2{  left:-38px;}
-.praisebox li div.info div.tishi dt{ position:absolute; top:-10px; right:60px;border-left:10px solid transparent; border-right:10px solid transparent; border-bottom:10px solid #fff; width:0; height:0;}
+.praisebox li div.info div.tishi{ display:none; position:absolute; width:200px; height:auto; padding:5px; background:#fff; bottom:50px; left:-10px; z-index:9999;}
+.praisebox li div.info div.ts2{ left:-88px;}
+.praisebox li div.info div.tishi dt{ position:absolute; bottom:-10px; left:60px;border-left:10px solid transparent; border-right:10px solid transparent; border-top:10px solid #fff; width:0; height:0;}
+.praisebox li div.info div.ts2 dt{left:120px;}
 .praisebox li div.info div.tishi dd{ color:#333;font-size:12px; text-align:left;}
-.praisebox li div.info div.tishi dd a img{ width:50px; height:50px; margin:0 5px 0 0; border:0; float:left;}
-.praisebox li div.info div.tishi dd h2{float:left;  height:20px; line-height:20px; width:100px; overflow:hidden;}
-.praisebox li div.info div.tishi dd p{float:left; line-height:15px;width:100px; height:30px; overflow:hidden;}
+.praisebox li div.info div.tishi dd a img{ width:40px; height:40px; margin:0 5px 0 0; border:0; float:left;}
+.praisebox li div.info div.tishi dd h2{float:left;  height:40px; line-height:20px; width:150px; overflow:hidden; font-size:14px;}
+.praisebox li div.info div.tishi dd h2 a{ text-decoration:none;}
+.praisebox li div.info div.tishi dd h2 a:hover{#ff9900;}
+.praisebox li div.info div.tishi dd p{float:left; line-height:15px;width:200px; margin-top:5px;}
+.praisebox li div.info div.tishi dd p a{ text-decoration:none;}
+.praisebox li div.info div.tishi dd p a:hover{#ff9900;}
 .praisebox li div.info:hover div.tishi{ display:block;}
 
 .praisebox li.color1{ background:#d90073;}
@@ -165,3 +170,6 @@ ul.squ1{ width:122px;}
 ul.squ2{ width:60px;}
 .mr2{ margin-right:2px;}
 .mb2{ margin-bottom:2px;}
+
+.btn_qbzjht{ text-align:center;}
+.btn_qbzjht a{ font-size:20px; font-weight:bold; text-decoration:none; color:#e5292a;}
