--- a/Public/Index4/css/style.css
+++ b/Public/Index4/css/style.css
@@ -184,8 +184,21 @@ ul.squ2{ width:60px;}
 .jiangpin p{ line-height:20px;}
 .eightitle{ width:295px; height:18px; background:url(../images/eightbg.png) no-repeat; margin:0 0 0 15px;}
 .huati{ width:440px; margin:0 0 0 10px;}
-.huati li{ float:left; width:105px; height:120px; margin-left:5px;}
+.huati li{ float:left; width:105px; height:120px; margin-left:5px; position:relative;}
 .huati li div{ color:#fff; line-height:20px; padding:5px; text-align:left; font-size:14px;}
+.huati li div.tishi{ display:none; position:absolute; width:200px; height:auto; padding:5px; background:#fff; bottom:65px; left:-10px; z-index:9999;}
+.huati li div.ts2{ left:-88px;}
+.huati li div.tishi dt{ position:absolute; bottom:-10px; left:60px;border-left:10px solid transparent; border-right:10px solid transparent; border-top:10px solid #fff; width:0; height:0;}
+.huati li div.ts2 dt{left:120px;}
+.huati li div.tishi dd{ color:#333;font-size:12px; text-align:left;}
+.huati li div.tishi dd a img{ width:40px; height:40px; margin:0 5px 0 0; border:0; float:left;}
+.huati li div.tishi dd h2{float:left;  height:40px; line-height:20px; width:150px; overflow:hidden; font-size:14px;}
+.huati li div.tishi dd h2 a{ text-decoration:none;}
+.huati li div.tishi dd h2 a:hover{#ff9900;}
+.huati li div.tishi dd p{float:left; line-height:15px;width:200px; margin-top:5px;}
+.huati li div.tishi dd p a{ text-decoration:none;}
+.huati li div.tishi dd p a:hover{#ff9900;}
+.huati li:hover div.tishi{ display:block;}
 .huati li a.icon_z{ background:url(../images/icon_z.png) left center no-repeat; padding-left:20px; color:#fff; font-size:18px; font-weight:600; float:right; margin-right:10px; display:inline-block;}
 .huati li.c1{ background:#d90073;}
 .huati li.c2{ background:#f1a30b;}
