解决页面兼容性

--- a/Public/Index4/css/style.css
+++ b/Public/Index4/css/style.css
@@ -217,10 +217,10 @@ ul.squ2{ width:60px;}
 .playlist li a div{ position:absolute; top:0; left:0; width:105px; height:120px; color:#fff;}
 .playlist li a div img{ width:45px; height:45px; border:0; vertical-align:middle; margin:10px 0 5px 30px;}
 .playlist li a div p{ padding:0 10px; font-size:13px; line-height:20px;}
-.playlist li.p1 a div{ background:#d90073;filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#64d90073',endColorstr='#64d90073');background:rgba(217,0,115,.6);}
-.playlist li.p2 a div{ background:#f1a30b;filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#64f1a30b',endColorstr='#64f1a30b');background:rgba(241,163,110,.6);}
-.playlist li.p3 a div{ background:#a4c400;filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#64a4c400',endColorstr='#64a4c400');background:rgba(164,196,0,.6);}
-.playlist li.p4 a div{ background:#28a652;filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#6428a652',endColorstr='#6428a652');background:rgba(40,166,86,.6);}
+.playlist li.p1 a div{ filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#64d90073',endColorstr='#64d90073');background:rgba(217,0,115,.6);}
+.playlist li.p2 a div{ filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#64f1a30b',endColorstr='#64f1a30b');background:rgba(241,163,110,.6);}
+.playlist li.p3 a div{ filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#64a4c400',endColorstr='#64a4c400');background:rgba(164,196,0,.6);}
+.playlist li.p4 a div{ filter:progid:DXImageTransform.Microsoft.gradient(enabled='true',startColorstr='#6428a652',endColorstr='#6428a652');background:rgba(40,166,86,.6);}
 
 .playbox{ background:#5f3cae; width:435px; height:250px; margin:0 0 0 15px;}
 .playbox a{position:relative; display:inline-block; width:435px; height:250px;}
